Optimize all images globally across site for performance

--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
             <div class="container">
                 <div class="about-grid">
                     <div class="about-image">
-                        <img src="./assets/images/core/headshot.png" alt="Saurabh Saini"
+                        <img decoding="async" loading="lazy" src="./assets/images/core/headshot.png" alt="Saurabh Saini"
                             onerror="this.src='https://placehold.co/600x800/EBE6DC/737780?text=Saurabh+Saini'">
                     </div>
                     <div class="about-content">
@@ -196,3 +196,4 @@
 </body>
 
 </html>
+
