--- a/case-ecosystem.html
+++ b/case-ecosystem.html
@@ -178,7 +178,7 @@
                 </header>
 
                 <div class="doc-image">
-                    <img src="./assets/learnings/hub1_MS_tools/MS_Tools_Overview2.png"
+                    <img decoding="async" loading="lazy" src="./assets/learnings/hub1_MS_tools/MS_Tools_Overview2.png"
                         alt="Microsoft Tools Operations Hub" class="zoomable-image" onclick="openLightbox(this.src)"
                         onerror="this.src='https://placehold.co/800x450/EBE6DC/737780?text=Operations+Hub'">
                 </div>
@@ -254,7 +254,7 @@
                         </p>
                         <div class="testimonial-author">
                             <div class="author-avatar">
-                                <img src="https://placehold.co/100x100/EBE6DC/737780?text=DS" alt="David Swensen">
+                                <img decoding="async" loading="lazy" src="https://placehold.co/100x100/EBE6DC/737780?text=DS" alt="David Swensen">
                             </div>
                             <div class="author-info">
                                 <h4>David Swensen</h4>
@@ -284,7 +284,7 @@
     <!-- Lightbox Modal -->
     <div id="imageLightbox" class="lightbox" onclick="closeLightbox()">
         <span class="lightbox-close" onclick="closeLightbox()">&times;</span>
-        <img class="lightbox-content" id="lightboxImg" onclick="event.stopPropagation()">
+        <img decoding="async" loading="lazy" class="lightbox-content" id="lightboxImg" onclick="event.stopPropagation()">
     </div>
 
     <script>
@@ -312,3 +312,4 @@
 </body>
 
 </html>
+
