--- a/case-psych_safety.html
+++ b/case-psych_safety.html
@@ -241,7 +241,7 @@
                 </header>
 
                 <div class="doc-image">
-                    <img src="./assets/projects/project2_psychological_safety/psych_safety_overview.png"
+                    <img decoding="async" loading="lazy" src="./assets/projects/project2_psychological_safety/psych_safety_overview.png"
                         alt="Psychological Safety Course Header" class="zoomable-image" onclick="openLightbox(this.src)"
                         onerror="this.src='https://placehold.co/800x450/EBE6DC/737780?text=Psychological+Safety'">
                 </div>
@@ -319,11 +319,11 @@
                     </p>
                     <div class="image-grid">
                         <div class="doc-image">
-                            <img src="./assets/projects/project2_psychological_safety/Storyboard4.PNG"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project2_psychological_safety/Storyboard4.PNG"
                                 alt="Storyboarding Process" onclick="openLightbox(this.src)">
                         </div>
                         <div class="doc-image">
-                            <img src="./assets/projects/project2_psychological_safety/Storyboard6.PNG"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project2_psychological_safety/Storyboard6.PNG"
                                 alt="Content Mapping" onclick="openLightbox(this.src)">
                         </div>
                     </div>
@@ -348,7 +348,7 @@
                         training was viewed as a strategic business initiative, rather than an HR requirement.
                     </p>
                     <div class="doc-image">
-                        <img src="./assets/projects/project2_psychological_safety/Report1.png"
+                        <img decoding="async" loading="lazy" src="./assets/projects/project2_psychological_safety/Report1.png"
                             alt="Analytics Scoreboard" onclick="openLightbox(this.src)">
                     </div>
 
@@ -365,19 +365,19 @@
 
                     <div class="image-grid">
                         <div class="doc-image">
-                            <img src="./assets/projects/project2_psychological_safety/course2.png"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project2_psychological_safety/course2.png"
                                 alt="Rise Course Layout" onclick="openLightbox(this.src)">
                         </div>
                         <div class="doc-image">
-                            <img src="./assets/projects/project2_psychological_safety/course3.png"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project2_psychological_safety/course3.png"
                                 alt="Bite-sized modules" onclick="openLightbox(this.src)">
                         </div>
                         <div class="doc-image">
-                            <img src="./assets/projects/project2_psychological_safety/course8.png" alt="Clean Interface"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project2_psychological_safety/course8.png" alt="Clean Interface"
                                 onclick="openLightbox(this.src)">
                         </div>
                         <div class="doc-image">
-                            <img src="./assets/projects/project2_psychological_safety/course9.png"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project2_psychological_safety/course9.png"
                                 alt="Mobile-first design" onclick="openLightbox(this.src)">
                         </div>
                     </div>
@@ -399,11 +399,11 @@
 
                     <div class="image-grid">
                         <div class="doc-image">
-                            <img src="./assets/projects/project2_psychological_safety/course5.png"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project2_psychological_safety/course5.png"
                                 alt="Interactive Scenario" onclick="openLightbox(this.src)">
                         </div>
                         <div class="doc-image">
-                            <img src="./assets/projects/project2_psychological_safety/course6.png" alt="Knowledge Check"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project2_psychological_safety/course6.png" alt="Knowledge Check"
                                 onclick="openLightbox(this.src)">
                         </div>
                     </div>
@@ -483,7 +483,7 @@
     <!-- Lightbox Modal -->
     <div id="imageLightbox" class="lightbox" onclick="closeLightbox()">
         <span class="lightbox-close" onclick="closeLightbox()">&times;</span>
-        <img class="lightbox-content" id="lightboxImg" onclick="event.stopPropagation()">
+        <img decoding="async" loading="lazy" class="lightbox-content" id="lightboxImg" onclick="event.stopPropagation()">
     </div>
 
     <script>
@@ -511,3 +511,4 @@
 </body>
 
 </html>
+
