--- a/case-storyline.html
+++ b/case-storyline.html
@@ -241,7 +241,7 @@
                 </header>
 
                 <div class="doc-image">
-                    <img src="./assets/projects/project3_storyline_example/project3_storyline_overview.png"
+                    <img decoding="async" loading="lazy" src="./assets/projects/project3_storyline_example/project3_storyline_overview.png"
                         alt="Storyline Interactive Learning System hero image" class="zoomable-image"
                         onclick="openLightbox(this.src)"
                         onerror="this.src='https://placehold.co/800x450/EBE6DC/737780?text=Interactive+Learning+System'">
@@ -312,11 +312,11 @@
                     </p>
                     <div class="image-grid">
                         <div class="doc-image">
-                            <img src="./assets/projects/project3_storyline_example/Course7.jpeg"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project3_storyline_example/Course7.jpeg"
                                 alt="Storyboarding logic" onclick="openLightbox(this.src)">
                         </div>
                         <div class="doc-image">
-                            <img src="./assets/projects/project3_storyline_example/Course8.jpeg"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project3_storyline_example/Course8.jpeg"
                                 alt="Feedback design flowchart" onclick="openLightbox(this.src)">
                         </div>
                     </div>
@@ -337,11 +337,11 @@
 
                     <div class="image-grid">
                         <div class="doc-image">
-                            <img src="./assets/projects/project3_storyline_example/Stoyline1.png"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project3_storyline_example/Stoyline1.png"
                                 alt="Storyline trigger implementation" onclick="openLightbox(this.src)">
                         </div>
                         <div class="doc-image">
-                            <img src="./assets/projects/project3_storyline_example/Stoyline3.png"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project3_storyline_example/Stoyline3.png"
                                 alt="Variables and layer logic" onclick="openLightbox(this.src)">
                         </div>
                     </div>
@@ -357,7 +357,7 @@
                         smoothly through required gateways without feeling constrained by typical "Next" button gating.
                     </p>
                     <div class="doc-image">
-                        <img src="./assets/projects/project3_storyline_example/Stoyline5.png"
+                        <img decoding="async" loading="lazy" src="./assets/projects/project3_storyline_example/Stoyline5.png"
                             alt="Custom navigation and triggers" onclick="openLightbox(this.src)">
                     </div>
 
@@ -387,11 +387,11 @@
                     </p>
                     <div class="image-grid">
                         <div class="doc-image">
-                            <img src="./assets/projects/project3_storyline_example/Course4.jpeg"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project3_storyline_example/Course4.jpeg"
                                 alt="Tablet Interaction" onclick="openLightbox(this.src)">
                         </div>
                         <div class="doc-image">
-                            <img src="./assets/projects/project3_storyline_example/Course6.jpeg"
+                            <img decoding="async" loading="lazy" src="./assets/projects/project3_storyline_example/Course6.jpeg"
                                 alt="Desktop Interaction" onclick="openLightbox(this.src)">
                         </div>
                     </div>
@@ -403,7 +403,7 @@
                         comprehension. Complex workflows were simplified into digestible visuals.
                     </p>
                     <div class="doc-image">
-                        <img src="./assets/projects/project3_storyline_example/Course12.jpeg"
+                        <img decoding="async" loading="lazy" src="./assets/projects/project3_storyline_example/Course12.jpeg"
                             alt="Process Simplification Visuals" onclick="openLightbox(this.src)">
                     </div>
 
@@ -476,7 +476,7 @@
     <!-- Lightbox Modal -->
     <div id="imageLightbox" class="lightbox" onclick="closeLightbox()">
         <span class="lightbox-close" onclick="closeLightbox()">&times;</span>
-        <img class="lightbox-content" id="lightboxImg" onclick="event.stopPropagation()">
+        <img decoding="async" loading="lazy" class="lightbox-content" id="lightboxImg" onclick="event.stopPropagation()">
     </div>
 
     <script>
@@ -504,3 +504,4 @@
 </body>
 
 </html>
+
