--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
           </div>
           <div class="hero-image-wrapper">
-            <img src="./assets/images/core/headshot2.png" alt="Saurabh Saini" class="hero-image"
+            <img decoding="async" loading="lazy" src="./assets/images/core/headshot2.png" alt="Saurabh Saini" class="hero-image"
               onerror="this.src='https://placehold.co/400x500/EBE6DC/737780?text=Saurabh+Saini'">
           </div>
         </div>
@@ -124,7 +124,7 @@
               actually drives impact. <strong>That's where Saurabh Saini stands out.</strong></p>
             <div class="testimonial-author">
               <div class="author-avatar">
-                <img src="https://placehold.co/100x100/EBE6DC/737780?text=DS" alt="David Swensen">
+                <img decoding="async" loading="lazy" src="https://placehold.co/100x100/EBE6DC/737780?text=DS" alt="David Swensen">
               </div>
               <div class="author-info">
                 <h4>David Swensen <svg class="linkedin-icon" viewBox="0 0 24 24">
@@ -153,7 +153,7 @@
               significantly elevate both their mindset and their impact...</p>
             <div class="testimonial-author">
               <div class="author-avatar">
-                <img src="https://placehold.co/100x100/EBE6DC/737780?text=SF" alt="Sheryl Smith Frobisher">
+                <img decoding="async" loading="lazy" src="https://placehold.co/100x100/EBE6DC/737780?text=SF" alt="Sheryl Smith Frobisher">
               </div>
               <div class="author-info">
                 <h4>Sheryl Smith Frobisher <svg class="linkedin-icon" viewBox="0 0 24 24">
@@ -185,13 +185,13 @@
       <div class="container">
         <p class="section-label text-center">Trusted By Industry Leaders</p>
         <div class="logo-strip">
-          <img src="./assets/images/clients/LOGO-AHS2-COLOR.png" alt="Client Logo AHS"
+          <img decoding="async" loading="lazy" src="./assets/images/clients/LOGO-AHS2-COLOR.png" alt="Client Logo AHS"
             onerror="this.src='https://placehold.co/150x50/F7F3EB/737780?text=Company+1'">
-          <img src="./assets/images/clients/LOGO-DFA-COLOR.png" alt="Client Logo DFA"
+          <img decoding="async" loading="lazy" src="./assets/images/clients/LOGO-DFA-COLOR.png" alt="Client Logo DFA"
             onerror="this.src='https://placehold.co/150x50/F7F3EB/737780?text=Company+2'">
-          <img src="./assets/images/clients/LOGO-DSG-COLOR.png" alt="Client Logo DSG"
+          <img decoding="async" loading="lazy" src="./assets/images/clients/LOGO-DSG-COLOR.png" alt="Client Logo DSG"
             onerror="this.src='https://placehold.co/150x50/F7F3EB/737780?text=Company+3'">
-          <img src="./assets/images/clients/LOGO-TDG-COLOR.png" alt="Client Logo TDG"
+          <img decoding="async" loading="lazy" src="./assets/images/clients/LOGO-TDG-COLOR.png" alt="Client Logo TDG"
             onerror="this.src='https://placehold.co/150x50/F7F3EB/737780?text=Company+4'">
         </div>
       </div>
@@ -248,3 +248,4 @@
 </body>
 
 </html>
+
