--- a/portfolio.html
+++ b/portfolio.html
@@ -180,7 +180,7 @@
           <article class="case-study-card">
             <div class="case-media">
               <a href="case-hazard.html">
-                <img src="./assets/projects/project1_hazard/images/project_hazard_overview_sqaure.png"
+                <img decoding="async" loading="lazy" src="./assets/projects/project1_hazard/images/project_hazard_overview_sqaure.png"
                   alt="Hazard Recognition Module"
                   onerror="this.src='https://placehold.co/800x600/EBE6DC/737780?text=Hazard+Recognition'">
               </a>
@@ -213,7 +213,7 @@
           <article class="case-study-card">
             <div class="case-media">
               <a href="case-ecosystem.html">
-                <img src="./assets/learnings/hub1_MS_tools/MS_Tools_Thumbnail2.png" alt="Microsoft Tools Integration"
+                <img decoding="async" loading="lazy" src="./assets/learnings/hub1_MS_tools/MS_Tools_Thumbnail2.png" alt="Microsoft Tools Integration"
                   onerror="this.src='https://placehold.co/800x600/EBE6DC/737780?text=Operations+Ecosystem'">
               </a>
             </div>
@@ -245,7 +245,7 @@
           <article class="case-study-card">
             <div class="case-media">
               <a href="case-psych_safety.html">
-                <img src="./assets/projects/project2_psychological_safety/psych_safety_overview2.png"
+                <img decoding="async" loading="lazy" src="./assets/projects/project2_psychological_safety/psych_safety_overview2.png"
                   alt="Psychological Safety Leadership Learning"
                   onerror="this.src='https://placehold.co/800x600/EBE6DC/737780?text=Psychological+Safety'">
               </a>
@@ -278,7 +278,7 @@
           <article class="case-study-card">
             <div class="case-media">
               <a href="case-storyline.html">
-                <img src="./assets/projects/project3_storyline_example/project3_storyline_overview2.png"
+                <img decoding="async" loading="lazy" src="./assets/projects/project3_storyline_example/project3_storyline_overview2.png"
                   alt="Storyline Interactive Learning System"
                   onerror="this.src='https://placehold.co/800x600/EBE6DC/737780?text=Interactive+Learning'">
               </a>
@@ -328,3 +328,4 @@
 </body>
 
 </html>
+
