--- a/insight-stop-building.html
+++ b/insight-stop-building.html
@@ -147,7 +147,7 @@
                 </header>
 
                 <div class="doc-image">
-                    <img src="./assets/learnings/4_layer_learning_analytics.png"
+                    <img decoding="async" loading="lazy" src="./assets/learnings/4_layer_learning_analytics.png"
                         alt="The 4 Layer Modern Learning Analytics" class="zoomable-image"
                         onclick="openLightbox(this.src)"
                         onerror="this.src='https://placehold.co/800x450/EBE6DC/737780?text=4+Layer+Learning+Analytics'">
@@ -237,7 +237,7 @@
     <!-- Lightbox Modal -->
     <div id="imageLightbox" class="lightbox" onclick="closeLightbox()">
         <span class="lightbox-close" onclick="closeLightbox()">&times;</span>
-        <img class="lightbox-content" id="lightboxImg" onclick="event.stopPropagation()">
+        <img decoding="async" loading="lazy" class="lightbox-content" id="lightboxImg" onclick="event.stopPropagation()">
     </div>
 
     <script>
@@ -265,3 +265,4 @@
 </body>
 
 </html>
+
