Fix CSS encoding mojibake on bullet points

--- a/services.html
+++ b/services.html
@@ -92,7 +92,7 @@
         }
 
         .service-features li::before {
-            content: "âœ¦";
+            content: "\2726";
             color: var(--accent-secondary);
             margin-top: -2px;
         }
